<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/lblSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/acSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/frame"
        android:imeOptions="actionSearch"
        android:inputType="number"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="48dp"
        android:paddingTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblSearch" />

    <ImageButton
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/clear"
        android:tint="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@+id/acSearch"
        app:layout_constraintEnd_toEndOf="@+id/acSearch"
        app:layout_constraintTop_toTopOf="@+id/acSearch"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    <TextView
        android:id="@+id/lblSeries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/series"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/acSearch" />

    <TextView
        android:id="@+id/lblTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        app:layout_constraintStart_toStartOf="@+id/lblSeries"
        app:layout_constraintTop_toBottomOf="@+id/lblSeries" />

    <TextView
        android:id="@+id/lblSuplier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suplier"
        app:layout_constraintStart_toStartOf="@+id/lblTitle"
        app:layout_constraintTop_toBottomOf="@+id/lblTitle" />

    <TextView
        android:id="@+id/lblCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        app:layout_constraintStart_toStartOf="@+id/lblSuplier"
        app:layout_constraintTop_toBottomOf="@+id/lblSuplier" />

    <TextView
        android:id="@+id/lblDelivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delivery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/lblCountry"
        app:layout_constraintTop_toBottomOf="@+id/lblCountry" />

    <android.support.constraint.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="lblCountry,lblSeries,lblSuplier,lblTitle,lblDelivery"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvSeries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toTopOf="@+id/lblSeries"
        tools:text="55000541312313" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tvSeries"
        app:layout_constraintTop_toBottomOf="@+id/tvSeries"
        tools:text="Rose" />

    <TextView
        android:id="@+id/tvSuplier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        tools:text="OZ" />

    <TextView
        android:id="@+id/tvCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tvSuplier"
        app:layout_constraintTop_toBottomOf="@+id/tvSuplier"
        tools:text="Belgium" />

    <TextView
        android:id="@+id/tvDelivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tvCountry"
        app:layout_constraintTop_toBottomOf="@+id/tvCountry"
        tools:text="CTQ34223" />
</android.support.constraint.ConstraintLayout>