<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/frame"
        android:ems="10"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:padding="8dp"
        android:saveEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnInc"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnDec"
        app:layout_constraintTop_toBottomOf="@+id/lblTitle"
        tools:text="47" />

    <ImageButton
        android:id="@+id/btnInc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/oval"
        android:contentDescription="@string/increment"
        app:layout_constraintBottom_toBottomOf="@+id/etAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/etAmount"
        app:layout_constraintTop_toTopOf="@+id/etAmount"
        app:srcCompat="@drawable/ic_add" />

    <ImageButton
        android:id="@+id/btnDec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/oval"
        android:contentDescription="@string/decrement"
        app:layout_constraintBottom_toBottomOf="@+id/etAmount"
        app:layout_constraintEnd_toStartOf="@+id/etAmount"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etAmount"
        app:srcCompat="@drawable/ic_remove" />

    <TextView
        android:id="@+id/lblTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/title"
        android:labelFor="@id/etAmount"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Title" />
</android.support.constraint.ConstraintLayout>