<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageButton
        android:id="@+id/ibPhoto"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@android:color/background_light"
        android:backgroundTint="@color/colorAccent"
        android:contentDescription="@string/photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ibBarcode"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/camera" />

    <ImageButton
        android:id="@+id/ibNext"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@android:color/background_light"
        android:backgroundTint="@color/colorAccent"
        android:contentDescription="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ibBarcode"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/send" />

    <ImageButton
        android:id="@+id/ibBarcode"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@android:color/background_light"
        android:backgroundTint="@color/colorAccent"
        android:contentDescription="@string/barcode"
        android:tint="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ibNext"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ibPhoto"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/barcode_scan" />

    <TextView
        android:id="@+id/tvNewPhotoCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ibBarcode"
        app:layout_constraintStart_toStartOf="@+id/ibPhoto"
        tools:text="+12" />

    <TextView
        android:id="@+id/tvPhotoCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ibBarcode"
        app:layout_constraintStart_toStartOf="@+id/ibPhoto"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.526"
        tools:text="3" />

</android.support.constraint.ConstraintLayout>